// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<YotpoIntegrationDetailComponent/> componentDidMount() should set the integration's name in the state 1`] = `
Object {
  "enable_yotpo_tickets": true,
  "integrationName": "test",
}
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should not do anything because the previous integration was not empty 1`] = `
Object {
  "enable_yotpo_tickets": true,
  "integrationName": "foo",
}
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should not do anything because there is no integration 1`] = `
Object {
  "enable_yotpo_tickets": false,
  "integrationName": "",
}
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should set the name of the integration in the state because there was no integration before and there is one now 1`] = `
Object {
  "enable_yotpo_tickets": true,
  "integrationName": "test",
}
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should set the name of the integration the state and set a timeout to fetch the integration because the action in the URL is set to \`authentication\` and the integration is not yet authenticated 1`] = `
Object {
  "enable_yotpo_tickets": true,
  "integrationName": "foo",
}
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should set the name of the integration the state and trigger a success notification because the action in the URL is set to \`authentication\` and the integration is already authenticated 1`] = `
Object {
  "enable_yotpo_tickets": true,
  "integrationName": "foo",
}
`;

exports[`<YotpoIntegrationDetailComponent/> render() should not render anything about the import and render the re-activate button instead of the deactivate button because the integration is deactivated 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        />
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <InputField
          label="Integration name"
          name="name"
          onChange={[Function]}
          type="text"
        />
        <BooleanField
          help={
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          }
          label="Enable Yotpo tickets"
          name="enable_yotpo_tickets"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <br />
        <div>
          <Button
            className="mr-2"
            color="success"
            disabled={false}
            onClick={[Function]}
            tag="button"
            type="submit"
          >
            Update integration
          </Button>
          <Button
            className=""
            color="success"
            disabled={false}
            onClick={[Function]}
            tag="button"
            type="button"
          >
            Reconnect integration
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
            disabled={false}
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete
          </ConfirmButton>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render a loader because the integration is loading 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render a small paragraph because the import is over 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        />
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <InputField
          label="Integration name"
          name="name"
          onChange={[Function]}
          type="text"
        />
        <BooleanField
          help={
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          }
          label="Enable Yotpo tickets"
          name="enable_yotpo_tickets"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <br />
        <div>
          <Button
            className="mr-2"
            color="success"
            disabled={false}
            onClick={[Function]}
            tag="button"
            type="submit"
          >
            Update integration
          </Button>
          <Button
            className=""
            color="success"
            disabled={false}
            onClick={[Function]}
            tag="button"
            type="button"
          >
            Reconnect integration
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
            disabled={false}
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete
          </ConfirmButton>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render an alert because the import is in progress 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        />
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <InputField
          label="Integration name"
          name="name"
          onChange={[Function]}
          type="text"
        />
        <BooleanField
          help={
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          }
          label="Enable Yotpo tickets"
          name="enable_yotpo_tickets"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <br />
        <div>
          <Button
            className="mr-2"
            color="success"
            disabled={false}
            onClick={[Function]}
            tag="button"
            type="submit"
          >
            Update integration
          </Button>
          <Button
            className=""
            color="success"
            disabled={false}
            onClick={[Function]}
            tag="button"
            type="button"
          >
            Reconnect integration
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
            disabled={false}
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete
          </ConfirmButton>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render buttons loading and disabled because a submit is in progress 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        />
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <InputField
          label="Integration name"
          name="name"
          onChange={[Function]}
          type="text"
        />
        <BooleanField
          help={
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          }
          label="Enable Yotpo tickets"
          name="enable_yotpo_tickets"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <br />
        <div>
          <Button
            className="mr-2 btn-loading"
            color="success"
            disabled={true}
            onClick={[Function]}
            tag="button"
            type="submit"
          >
            Update integration
          </Button>
          <Button
            className="btn-loading"
            color="success"
            disabled={true}
            onClick={[Function]}
            tag="button"
            type="button"
          >
            Reconnect integration
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
            disabled={true}
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete
          </ConfirmButton>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render not render deactivate / reactivate buttons because authentication is required 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        />
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        md="8"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <InputField
          label="Integration name"
          name="name"
          onChange={[Function]}
          type="text"
        />
        <BooleanField
          help={
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          }
          label="Enable Yotpo tickets"
          name="enable_yotpo_tickets"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <br />
        <div>
          <Button
            className="mr-2"
            color="success"
            disabled={false}
            onClick={[Function]}
            tag="button"
            type="submit"
          >
            Update integration
          </Button>
          <Button
            className=""
            color="success"
            disabled={false}
            onClick={[Function]}
            tag="button"
            type="button"
          >
            Reconnect integration
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
            disabled={false}
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete
          </ConfirmButton>
        </div>
      </Col>
    </Row>
  </Container>
</div>
`;
